--- a/package.json
+++ b/package.json
@@ -5,14 +5,17 @@
   "description": "",
   "main": ".src/app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon src/app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dayjs": "^1.11.7",
     "dotenv": "^16.0.3",
-    "mongo": "^0.1.0"
+    "joi": "^17.7.0",
+    "mongodb": "^4.13.0",
+    "nodemon": "^2.0.20"
   }
 }
